--- a/.github/workflows/structured-metadata-checker.yml
+++ b/.github/workflows/structured-metadata-checker.yml
@@ -1,7 +1,21 @@
-name: Structured Metadata Files Checker
+name: "File existence check"
+
 on: [push]
+
 jobs:
-  Explore-GitHub-Actions:
+  file_existence:
     runs-on: ubuntu-latest
     steps:
-      - run: '((test -f README || test -f README.md) && echo Success: Structured metadata files available) || echo Failed: Structured metadata file/s missing'
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "LICENSE"
+
+      - name: File exists
+        if: steps.check_files.outputs.files_exists == 'true'
+        # Only runs if all of the files exists
+        run: echo All files exists!
