--- a/.github/workflows/structured-metadata-checker.yml
+++ b/.github/workflows/structured-metadata-checker.yml
@@ -11,9 +11,10 @@ jobs:
 
       - name: Check file existence
         id: check_files
+        # https://github.com/andstor/file-existence-action
         uses: andstor/file-existence-action@v1
         with:
-          files: "LICENSE"
+          files: "README, CONTRIBUTE, AUTHORS, LICENSE, CITATION.cff"
 
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'true'
