only checking LICENSE

--- a/.github/workflows/structured-metadata-checker.yml
+++ b/.github/workflows/structured-metadata-checker.yml
@@ -14,7 +14,7 @@ jobs:
         # https://github.com/andstor/file-existence-action
         uses: andstor/file-existence-action@v1
         with:
-          files: "README, CONTRIBUTE, AUTHORS, LICENSE, CITATION.cff"
+          files: "LICENSE"
 
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'true'
